--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "raine",
+  "name": "ranie",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint-staged": "prettier --write --ignore-unknown",
-    "preview": "vite preview",
-    "prepare": "husky"
-  },
   "dependencies": {
     "@supabase/supabase-js": "^2.42.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@uppy/core": "^3.10.1",
+    "@uppy/dashboard": "^3.8.1",
+    "@uppy/drag-drop": "^3.1.0",
+    "@uppy/file-input": "^3.1.1",
+    "@uppy/progress-bar": "^3.1.1",
     "@uppy/react": "^3.3.0",
+    "@uppy/tus": "^3.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "uppy": "^3.24.3",
-    "uuid": "^9.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "3.2.5",
-    "vite": "^5.2.9"
+    "tailwindcss": "^3.4.3"
   }
 }
