--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ranie",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rememberingranie.com",
   "dependencies": {
     "@supabase/supabase-js": "^2.42.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "@uppy/progress-bar": "^3.1.1",
     "@uppy/react": "^3.3.0",
     "@uppy/tus": "^3.5.4",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
